Fixed dark mode colors

--- a/frontend/src/app/components/fight/duel/user-score/fault/fault.component.scss
+++ b/frontend/src/app/components/fight/duel/user-score/fault/fault.component.scss
@@ -21,8 +21,8 @@
 .fault .tooltiptext {
   visibility: hidden;
   width: 200px;
-  background-color: #555555;
-  color: #ffffff;
+  background-color: var(--tooltip-background);
+  color: var(--tooltip-text);
   text-align: center;
   padding: 5px 0;
   border-radius: 6px;
